--- a/product.crud/src/main/resources/application.properties
+++ b/product.crud/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/farmacia
+spring.datasource.username=postgres
+spring.datasource.password=dba
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 
